src/objects/Charge_Item__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_A_R_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default A/R Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Charge Items (Default A/R Account)</relationshipLabel>
        <relationshipName>Reservation_Line_Choices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Charge Items (Financial Account)</relationshipLabel>
        <relationshipName>Reservation_Line_Choices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Liquor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gratuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_Split__c</fullName>
        <label>Price Split</label>
        <summarizedField>Revenue_Split__c.Split_Amount__c</summarizedField>
        <summaryForeignKey>Revenue_Split__c.Charge_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remind_Technician__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remind Technician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Technician__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Technician?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <globalPicklist>SubType</globalPicklist>
        <label>SubType</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technician_Email__c</fullName>
        <label>Technician Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <label>Technician</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <globalPicklist>Type</globalPicklist>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Charge Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isActive__c</columns>
        <columns>Description__c</columns>
        <columns>Price__c</columns>
        <columns>Type__c</columns>
        <columns>SubType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dues_Charge_Items</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Item_Code__c</columns>
        <columns>isActive__c</columns>
        <columns>Description__c</columns>
        <columns>Price__c</columns>
        <columns>Retail_Price__c</columns>
        <columns>Type__c</columns>
        <columns>SubType__c</columns>
        <columns>Financial_Account__c</columns>
        <columns>Default_A_R_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Charge_Item__c.Dues</value>
        </filters>
        <label>Dues Charge Items</label>
    </listViews>
    <listViews>
        <fullName>Event_Menu_Items</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Item_Code__c</columns>
        <columns>isActive__c</columns>
        <columns>Description__c</columns>
        <columns>Price__c</columns>
        <columns>Retail_Price__c</columns>
        <columns>Type__c</columns>
        <columns>SubType__c</columns>
        <columns>Financial_Account__c</columns>
        <columns>Default_A_R_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Charge_Item__c.Event_Menu</value>
        </filters>
        <label>Event Menu Items</label>
    </listViews>
    <listViews>
        <fullName>Miscellaneous_Charge_Items</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Item_Code__c</columns>
        <columns>isActive__c</columns>
        <columns>Description__c</columns>
        <columns>Price__c</columns>
        <columns>Retail_Price__c</columns>
        <columns>Type__c</columns>
        <columns>SubType__c</columns>
        <columns>Financial_Account__c</columns>
        <columns>Default_A_R_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Charge_Item__c.Misc_Charges</value>
        </filters>
        <label>Miscellaneous Charge Items</label>
    </listViews>
    <listViews>
        <fullName>POS_Dining_Room_Items</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Item_Code__c</columns>
        <columns>isActive__c</columns>
        <columns>Description__c</columns>
        <columns>Price__c</columns>
        <columns>Retail_Price__c</columns>
        <columns>Type__c</columns>
        <columns>SubType__c</columns>
        <columns>Financial_Account__c</columns>
        <columns>Default_A_R_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Charge_Item__c.POS_Dining_Room</value>
        </filters>
        <label>POS Dining Room Items</label>
    </listViews>
    <listViews>
        <fullName>POS_Retail_Items</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Item_Code__c</columns>
        <columns>isActive__c</columns>
        <columns>Description__c</columns>
        <columns>Price__c</columns>
        <columns>Retail_Price__c</columns>
        <columns>Type__c</columns>
        <columns>SubType__c</columns>
        <columns>Financial_Account__c</columns>
        <columns>Default_A_R_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Charge_Item__c.POS_Retail</value>
        </filters>
        <label>POS Retail Items</label>
    </listViews>
    <nameField>
        <label>Charge Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Items</pluralLabel>
    <recordTypes>
        <fullName>Dues</fullName>
        <active>true</active>
        <description>Use for creating manual charges for dues.</description>
        <label>Dues</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Menu</fullName>
        <active>true</active>
        <description>Use for creating an event related charge (Menu items, Fees, Rental Charges).</description>
        <label>Event Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>Misc_Charges</fullName>
        <active>true</active>
        <description>Use for creating any miscellaneous type of charge.</description>
        <label>Misc Charges</label>
    </recordTypes>
    <recordTypes>
        <fullName>POS_Dining_Room</fullName>
        <active>true</active>
        <description>Use this for charge items sold in the dining area.</description>
        <label>POS Dining Room</label>
    </recordTypes>
    <recordTypes>
        <fullName>POS_Retail</fullName>
        <active>true</active>
        <description>Use for charge items sold in a retail area.</description>
        <label>POS Retail</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>